<resources>
    <string name="app_name">Sea要保護您</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="Placeholder_windSpeed">風速：無</string>
    <string name="placeholder_WindDirection">風向：無</string>
    <string name="placeholder_UltraViolet">舒適度：無</string>
    <string name="placeholder_Raindrop">降雨率：無</string>
    <string name="placeholder_Comment">小語：無</string>
    <string name="placeholder_Humidity">濕度：無</string>
    <string name="placeholder_Temperature">溫度：無</string>
    <string name="placeholder_ViewName">景點名稱</string>
    <string name="placeholder_viewImage">景點照片</string>
    <string name="locating_text">定位中</string>
</resources>