<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/imageViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxHeight="400dp"
            android:minHeight="250dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/placeholder_viewImage"
            android:scaleType="centerCrop"
            android:src="@drawable/kenting" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/TextViewBG"
            android:fontFamily="@font/font1"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:text="@string/placeholder_ViewName"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLayout">

        <RelativeLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/placeholder_Temperature"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/temperature" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/placeholder_Humidity"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/humidity"
                android:layout_toEndOf="@id/temperature"/>

            <TextView
                android:id="@+id/windspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/Placeholder_windSpeed"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/windspeed"
                android:layout_below="@id/temperature"/>

            <TextView
                android:id="@+id/winddirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/placeholder_WindDirection"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/winddirection"
                android:layout_below="@id/humidity"
                android:layout_toEndOf="@id/windspeed"/>

            <TextView
                android:id="@+id/ultriaviolet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/placeholder_UltraViolet"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ultraviolet"
                android:layout_below="@id/windspeed"/>

            <TextView
                android:id="@+id/raindrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/placeholder_Raindrop"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/raindrop"
                android:layout_below="@id/ultriaviolet"/>

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/font1"
                android:text="@string/placeholder_Comment"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/comment"
                android:layout_below="@id/raindrop"/>

            <Button
                android:id="@+id/swim"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/swim"
                android:text="游泳"
                android:textSize="12sp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/comment"/>

            <Button
                android:id="@+id/diving"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/diving"
                android:text="潛水"
                android:textSize="12sp"
                android:layout_below="@id/comment"
                android:layout_toEndOf="@id/swim"/>

            <Button
                android:id="@+id/surfing"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/surfing"
                android:text="衝浪"
                android:textSize="12sp"
                android:layout_below="@id/swim"/>

            <Button
                android:id="@+id/BananaBoat"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/banana"
                android:text="香蕉船"
                android:textSize="12sp"
                android:layout_below="@id/diving"
                android:layout_toEndOf="@id/surfing"/>

            <Button
                android:id="@+id/JetSki"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/surfing"
                android:text="水上摩托車"
                android:textSize="12sp"
                android:layout_below="@id/surfing" />

            <Button
                android:id="@+id/AquaBoard"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/banana"
                android:text="衝浪板"
                android:textSize="12sp"
                android:layout_below="@id/BananaBoat"
                android:layout_toEndOf="@id/JetSki"/>
        </RelativeLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Vertical_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</RelativeLayout>